--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,20 +1,7 @@
 {
   "admin.UserPicker.label": "User",
   "admin.UserPicker.null": "Any",
-  "admin.mainMenu": "Administration",
-  "admin.menu.claimAdministrators": "Claim Administrators",
-  "admin.menu.enrollmentOfficers": "Enrollment Officers",
   "admin.menu.programs": "Programs",
-  "admin.menu.healthFacilities": "Health Facilities",
-  "admin.menu.locations": "Locations",
-  "admin.menu.medicalItems": "Medical Items",
-  "admin.menu.medicalItemsPrices": "Medical Items Price Lists",
-  "admin.menu.medicalServices": "Medical Services",
-  "admin.menu.medicalServicesPrices": "Medical Services Price Lists",
-  "admin.menu.payers": "Payers",
-  "admin.menu.products": "Products",
-  "admin.menu.users": "Users",
-  "admin.menu.usersProfiles": "Users Profiles",
   "admin.showHistory": "Show historical values",
   "admin.user.CreateUser.mutationLabel": "Create user",
   "admin.user.UserOverview.newTitle": "New User",
@@ -76,5 +63,18 @@
   "admin.EnrolmentOfficerPicker.loadingText": "Loading...",
   "admin.EnrolmentOfficerPicker.clearText": "Clear",
   "admin.EnrolmentOfficerPicker.openText": "Open",
-  "admin.EnrolmentOfficerPicker.closeText": "Close"
+  "admin.EnrolmentOfficerPicker.closeText": "Close",
+  "admin.mainMenu": "Administration",
+  "admin.menu.products": "Products",
+  "admin.menu.healthFacilities": "Health Facilities",
+  "admin.menu.medicalServicesPrices": "Medical Services Price List",
+  "admin.menu.medicalItemsPrices": "Medical Items Price List",
+  "admin.menu.medicalServices": "Medical Services",
+  "admin.menu.medicalItems": "Medical Items",
+  "admin.menu.users": "Users",
+  "admin.menu.usersProfiles": "Users Profiles",
+  "admin.menu.enrollmentOfficers": "Enrollment Officers",
+  "admin.menu.claimAdministrators": "Claim Administrators",
+  "admin.menu.payers": "Payers",
+  "admin.menu.locations": "Locations"
 }
