--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,5 +1,18 @@
 {
     "admin.menu.programs": "Programmes",
     "admin.user.programPicker.label": "Programme(s) de l'utilisateur",
-    "admin.user.programPicker.placeholder": "Selectionner le(s) programme(s) de l'utilisateur"
+    "admin.user.programPicker.placeholder": "Selectionner le(s) programme(s) de l'utilisateur",
+    "admin.mainMenu": "Administration",
+    "admin.menu.products": "Paquet de bénéfices",
+    "admin.menu.healthFacilities": "Établissements de santé",
+    "admin.menu.medicalServicesPrices": "Liste de prix des soins",
+    "admin.menu.medicalItemsPrices": "Liste de prix des produits médicaux",
+    "admin.menu.medicalServices": "Soins",
+    "admin.menu.medicalItems": "Produit médical",
+    "admin.menu.users": "Utilisateurs",
+    "admin.menu.usersProfiles": "Profils des utilisateurs",
+    "admin.menu.enrollmentOfficers": "Agents d'inscription",
+    "admin.menu.claimAdministrators": "Administrateurs des prestations",
+    "admin.menu.payers": "Payeurs",
+    "admin.menu.locations": "Sites"
 }
